@@ -4,18 +4,19 @@ import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonProperty;
 
 import seedu.address.commons.exceptions.IllegalValueException;
-import seedu.address.model.person.Address;
+import seedu.address.model.attendance.Attendance;
 import seedu.address.model.person.Email;
+import seedu.address.model.person.FavouriteStatus;
 import seedu.address.model.person.Name;
 import seedu.address.model.person.Person;
 import seedu.address.model.person.Phone;
-import seedu.address.model.tag.Tag;
+import seedu.address.model.person.Telegram;
+import seedu.address.model.role.Role;
 
 /**
  * Jackson-friendly version of {@link Person}.
@@ -27,22 +28,30 @@ class JsonAdaptedPerson {
     private final String name;
     private final String phone;
     private final String email;
-    private final String address;
-    private final List<JsonAdaptedTag> tags = new ArrayList<>();
+    private final String telegram;
+    private final List<JsonAdaptedRole> roles = new ArrayList<>();
+    private final List<JsonAdaptedAttendance> attendance = new ArrayList<>();
+    private final String favouriteStatus;
 
     /**
      * Constructs a {@code JsonAdaptedPerson} with the given person details.
      */
     @JsonCreator
     public JsonAdaptedPerson(@JsonProperty("name") String name, @JsonProperty("phone") String phone,
-            @JsonProperty("email") String email, @JsonProperty("address") String address,
-            @JsonProperty("tags") List<JsonAdaptedTag> tags) {
+            @JsonProperty("email") String email, @JsonProperty("telegram") String telegram,
+            @JsonProperty("roles") List<JsonAdaptedRole> roles,
+            @JsonProperty("attendance") List<JsonAdaptedAttendance> attendance,
+                             @JsonProperty("favouriteStatus") String favouriteStatus) {
         this.name = name;
         this.phone = phone;
         this.email = email;
-        this.address = address;
-        if (tags != null) {
-            this.tags.addAll(tags);
+        this.telegram = telegram;
+        this.favouriteStatus = favouriteStatus;
+        if (roles != null) {
+            this.roles.addAll(roles);
+        }
+        if (attendance != null) {
+            this.attendance.addAll(attendance);
         }
     }
 
@@ -53,10 +62,14 @@ class JsonAdaptedPerson {
         name = source.getName().fullName;
         phone = source.getPhone().value;
         email = source.getEmail().value;
-        address = source.getAddress().value;
-        tags.addAll(source.getTags().stream()
-                .map(JsonAdaptedTag::new)
-                .collect(Collectors.toList()));
+        telegram = source.getTelegram().value;
+        favouriteStatus = source.getFavouriteStatus().toString();
+        roles.addAll(source.getRoles().stream()
+                .map(JsonAdaptedRole::new)
+                .toList());
+        attendance.addAll(source.getAttendance().stream()
+                .map(JsonAdaptedAttendance::new)
+                .toList());
     }
 
     /**
@@ -65,9 +78,15 @@ class JsonAdaptedPerson {
      * @throws IllegalValueException if there were any data constraints violated in the adapted person.
      */
     public Person toModelType() throws IllegalValueException {
-        final List<Tag> personTags = new ArrayList<>();
-        for (JsonAdaptedTag tag : tags) {
-            personTags.add(tag.toModelType());
+        final List<Role> personRoles = new ArrayList<>();
+        final List<Attendance> personAttendance = new ArrayList<>();
+
+        for (JsonAdaptedRole role : roles) {
+            personRoles.add(role.toModelType());
+        }
+
+        for (JsonAdaptedAttendance session : attendance) {
+            personAttendance.add(session.toModelType());
         }
 
         if (name == null) {
@@ -94,16 +113,28 @@ class JsonAdaptedPerson {
         }
         final Email modelEmail = new Email(email);
 
-        if (address == null) {
-            throw new IllegalValueException(String.format(MISSING_FIELD_MESSAGE_FORMAT, Address.class.getSimpleName()));
+        if (telegram == null) {
+            throw new IllegalValueException(String.format(MISSING_FIELD_MESSAGE_FORMAT,
+                    Telegram.class.getSimpleName()));
         }
-        if (!Address.isValidAddress(address)) {
-            throw new IllegalValueException(Address.MESSAGE_CONSTRAINTS);
+        if (!Telegram.isValidTelegram(telegram)) {
+            throw new IllegalValueException(Telegram.MESSAGE_CONSTRAINTS);
         }
-        final Address modelAddress = new Address(address);
+        final Telegram modelTelegram = new Telegram(telegram);
 
-        final Set<Tag> modelTags = new HashSet<>(personTags);
-        return new Person(modelName, modelPhone, modelEmail, modelAddress, modelTags);
+        if (favouriteStatus == null) {
+            throw new IllegalValueException(String.format(MISSING_FIELD_MESSAGE_FORMAT,
+                    FavouriteStatus.class.getSimpleName()));
+        }
+        if (!FavouriteStatus.isValidFavouriteStatus(favouriteStatus)) {
+            throw new IllegalValueException(FavouriteStatus.MESSAGE_CONSTRAINTS);
+        }
+        final FavouriteStatus modelFavouriteStatus = FavouriteStatus.valueOf(favouriteStatus);
+
+        final Set<Role> modelRoles = new HashSet<>(personRoles);
+        final Set<Attendance> modelAttendance = new HashSet<>(personAttendance);
+        return new Person(modelName, modelPhone, modelEmail, modelTelegram, modelRoles,
+                modelAttendance, modelFavouriteStatus);
     }
 
 }
